Fixes caps spacing variable for Basscss

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -11,6 +11,8 @@ $green: rgb(80, 170, 20);
 $black: rgb(0, 5, 10);
 $aqua: rgb(230, 245, 255);
 
+$caps-letter-spacing: 0;
+
 
 // Dependencies
 @import "../node_modules/normalize.css/normalize";
